--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6"
+    "@actions/core": "^1.2.6",
+    "@octokit/core": "^3.5.1",
+    "cli-table3": "^0.6.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
